quarter-final version

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -7,5 +7,36 @@
 </ion-header>
 
 <ion-content padding>
-
+  <h2>Instructions</h2>
+  <p>On the Home Page is one big button.</p>
+  <ul>
+    <li>
+      <strong>On Launch/Resume/Tap</strong><br>
+      When Passenger first launches, when it resumes after 
+      having been hidden, or when you click the button it will determine your
+      phone's current position, and let you know it there 
+      is any dangerous weather ahead or in your immediate 
+      area that you need to worry about. This will also happen 
+      when you go back to the Home Page from the About Page, 
+      or when you re-open the app when it has been hidden. 
+      (actual device data)
+    </li>
+    <li>
+      <strong>Swipe Left</strong><br>
+      Passenger will let you know that you are approaching
+      an area where there is a Flash Flood Warning in about 
+      15 minutes. (simulated device data)
+    </li>
+    <li>
+      <strong>Swipe Right</strong><br>
+      Passenger will let you know that there is a Flash
+      Flood Warning in your immediate area. (simulated device data)
+    </li>
+  </ul>
+  <p>
+    If you have Google Assistant turned on, and set so that
+    you can wake up the phone with your voice, you can use
+    Passenger entirely hands free by saying "Ok Google. Launch 
+    Passenger."
+  </p>
 </ion-content>
