updated splash; added i18n

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,42 +1,25 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>
-      About
-    </ion-title>
+    <ion-title>{{ 'INFO' | translate }}</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h2>Instructions</h2>
-  <p>On the Home Page is one big button.</p>
+  <h2>{{ 'HOWTO' | translate }}</h2>
+  <p>{{ 'ONHOME' | translate }}</p>
   <ul>
     <li>
-      <strong>On Launch/Resume/Tap</strong><br>
-      When Passenger first launches, when it resumes after 
-      having been hidden, or when you click the button it will determine your
-      phone's current position, and let you know it there 
-      is any dangerous weather ahead or in your immediate 
-      area that you need to worry about. This will also happen 
-      when you go back to the Home Page from the About Page, 
-      or when you re-open the app when it has been hidden. 
-      (actual device data)
+      <strong>{{ 'ONTAP' | translate }}</strong><br>
+      {{ 'TAPTXT' | translate }}
     </li>
     <li>
-      <strong>Swipe Left</strong><br>
-      Passenger will let you know that you are approaching
-      an area where there is a Flash Flood Warning in about 
-      15 minutes. (simulated device data)
+      <strong>{{ 'SWIPELEFT' | translate }}</strong><br>
+      {{ 'SWPLFTTXT' | translate }}
     </li>
     <li>
-      <strong>Swipe Right</strong><br>
-      Passenger will let you know that there is a Flash
-      Flood Warning in your immediate area. (simulated device data)
+      <strong>{{ 'SWIPERIGHT' | translate }}</strong><br>
+      {{ 'SWPRGTTXT' | translate }}
     </li>
   </ul>
-  <p>
-    If you have Google Assistant turned on, and set so that
-    you can wake up the phone with your voice, you can use
-    Passenger entirely hands free by saying "Ok Google. Launch 
-    Passenger."
-  </p>
+  <p>{{ 'GOOGASS' | translate }}</p>
 </ion-content>
