added more langs/watson svcs

--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -25,4 +25,5 @@
       </ion-list>
     </ion-item>
   </ion-list>
+  <button ion-button (click)="record()">Record Something</button>
 </ion-content>
